# kuku

./: .gitignore  README.md  app.py  main.py  pyproject.toml  run.bat
src/suspense_app/: __init__.py  app.py  cli.py  components.py  data.py  models.py  state.py  styles.py
tests/: test_models.py
