[project]
name = "suspense-app"
version = "0.2.0"
description = "《午夜疑案》——悬疑推理风格的 Streamlit 应用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.59.0",
]

[project.scripts]
suspense-app = "suspense_app.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suspense_app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/suspense_app/styles.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
